# adventofcode

./: .ghcid  .gitignore  .hlint.yaml  .stylish-haskell.yaml  LICENSE  README.md  adventofcode.cabal  package.yaml  run.sh  run_all.sh  stack.yaml
.github/workflows/: ci.yaml
res/: answers.txt
res/Y21/: D14.txt
res/Y22/: D05.txt
res/Y23/: D04.txt  D05.txt  D12.txt  D14.txt  D19.txt
scripts/: auto-exec.sh  auto-ghcid.sh  auto-test.sh  build-exec.sh  build-prof.sh  clean-build.sh  exec.sh  repl-prof.sh  runghc.sh
src/: AXY.hs  AXYZ.hs  Box.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day06Perf.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Imports.hs  Letters.hs  MVec2.hs  Main.hs  MainLib.hs  Parser.hs  Pathfinder.hs  Point.hs  Spatial.hs  Terminal.hs  Util.hs  Vec2.hs  Vec2M.hs  XY.hs  XYZ.hs
src.exe/: Days.hs  DaysTH.hs  MainExe.hs  MainExeTH.hs  Report.hs  SysInfo.hs  SystemInfo.hs  Types.hs
src/Geom/: AXY.hs  AXYZ.hs  Box.hs  Point.hs  Range.hs  Spatial.hs  XY.hs  XYZ.hs
src/Y15/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D06HM.hs  D06IO.hs  D06M.hs  D06ST.hs  D06Shared.hs  D07.hs  D08.hs  D09.hs  D10.hs  D11.hs  D12.hs  D13.hs  D14.hs  D15.hs  D16.hs  D17.hs  D18.hs  D19.hs  D20.hs  D21.hs
src/Y2015/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D06Perf.hs  D07.hs  D08.hs  D09.hs  D10.hs
src/Y21/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D07.hs  D08.hs  D09.hs  D10.hs  D11.hs  D12.hs  D13.hs  D14.hs  D15.hs  D16.hs  D17.hs  D18.hs  D19.hs  D20.hs  D21.hs  D22.hs
src/Y22/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D07.hs  D08.hs  D09.hs  D10.hs  D11.hs  D12.hs  D13.hs  D14.hs
src/Y23/: D01.hs  D02.hs  D03.hs  D04.hs  D05.hs  D06.hs  D07.hs  D08.hs  D09.hs  D10.hs  D11.hs  D12.hs  D13.hs  D14.hs  D15.hs  D16.hs  D17.hs  D19.hs
test/: MainTest.hs  TestBox.hs  TestSpatial.hs  TestUtil.hs
test/Geom/: TestBox.hs  TestRange.hs  TestSpatial.hs
test/Y15/: TestD15.hs  TestD16.hs  TestD17.hs  TestD18.hs  TestD19.hs  TestD21.hs
test/Y21/: TestD15.hs  TestD16.hs  TestD18.hs  TestD19.hs  TestD20.hs  (+1 more)
(+1 files in other folders)
