name:                adventofcode
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/oshyshko/adventofcode
license:             BSD3
license-file:        LICENSE
author:              Oleksandr Shyshko
maintainer:          oshyshko@gmail.com
copyright:           2016 Oleksandr Shyshko
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22.5

executable adventofcode-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  -- extensions:          Strict
  -- extensions:          LambdaCase
  -- ghc-options:         -threaded -with-rtsopts=-N -rtsopts -O2 -optc-O3
  -- ghc-options:         -rtsopts -O2 -optc-O3
  ghc-options:         -Wall
                    --    -Werror
                       -fwarn-incomplete-patterns
                       -fno-warn-type-defaults
                       -fno-warn-unused-do-bind
                    --    -fno-warn-unused-imports
                       -O2 -optc-O3
                    --    -rtsopts -eventlog
  build-depends:       base
                     , array
                     , bytestring
                     , containers
                     , deepseq
                     , mtl
                     , parsec
                     , pureMD5
                     , split
                     , time
  default-language:    Haskell2010

test-suite adventofcode-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , adventofcodeexe
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -Wall
                       -fno-warn-unused-do-bind
                       -fno-warn-type-defaults
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/adventofcode
